profile details update

--- a/CourseProject.html
+++ b/CourseProject.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Academic website of Uday">
-    <meta name="author" content="Udaya Bhaskar Kothapalli">
+    <meta name="description" content="Academic website of Khyathi Balusu">
+    <meta name="author" content="Khyathi Balusu">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -77,7 +77,7 @@
  </nav>
 <div class="container">
     <div class="jumbotron">
-        <h1 align="justify">Course & Mini Projectss</h1>
+        <h1 align="justify">Course & Mini Projects</h1>
 
         <div class="row">
             <div class="col-sm-6 col-md-6">
@@ -124,16 +124,7 @@
                 </div>
             </div>
 			
-			 <div class="col-sm-6 col-md-6">
-                <div class="thumbnail">
-                    <img src="images/icons/hitflopsong.png"  alt="">
-                    <div class="caption">
-                        <h3>Hit/Flop prediction for songs using NLP </h3>
-                        <h4>A model that doubles up to predict the hit probability of a given song and recommend similar songs using its lyrics</h4>
-                        <p align="right"><a href="https://github.com/khyathibalusu/Hit-Flop-Prediction-cum-Recommendation-for-songs-using-NLP" class="btn btn-primary" target="_blank">More Details </a> <!--<a href="ML-WLED.html" class="btn">Coursera- 2015 </a>--></p>
-                    </div>
-                </div>
-            </div>
+			 
 
 
 
