--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Academic website of Uday">
+    <meta name="description" content="Academic website of Khyathi Balusu">
     <meta name="author" content="Khyathi Balusu">
     
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -60,7 +60,7 @@
 
   <div class="col-md-3 col-sm-12">
       <div class="profileimage">
-    <img src="images/khyathi.jpg" alt="Me @ CCU" height="270" width="200">
+    <img src="images/khyathi.png" alt="Me @ CCU" height="270" width="200">
           </div>
 
   </div>
@@ -69,7 +69,8 @@
 
      <h1 style="padding-left: 5px">Howdy!</h1>
     <p style="padding-left: 6px;padding-right: 6px">I am Khyathi, an ML Engineer at Google. I have a Master's in Business Analytics from University of Texas at Austin and Bachelor's in Electrical, Electronics and Comminications Engineering from JNTU Hyderabad.</p>
-    <p style="padding-left: 6px;padding-right: 6px">Here, you will find all the information about my professional and educational qualifications, Research activities and the various Extra-curricular and Co-curricular Activities.</p>
+    <p style="padding-left: 6px;padding-right: 6px">Here, you will find all the information about my professional and educational qualifications, 
+													Research activities and the various Extra-curricular and Co-curricular Activities.</p>
     
 
   </div>
