--- a/MyProjects.html
+++ b/MyProjects.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Academic website of Uday">
-    <meta name="author" content="Udaya Bhaskar Kothapalli">
+    <meta name="description" content="Academic website of Khyathi Balusu">
+    <meta name="author" content="Khyathi Balusu">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
