updated the resume page

--- a/Resume.html
+++ b/Resume.html
@@ -86,19 +86,19 @@
 	</div>
 	<div class="col-md-3 pull-right">
 			<ul class="thumbnails">
-                <a href="https://drive.google.com/file/d/0BwEnHo9ywNxyUWxVOHh2bnozYXc/view?usp=sharing" target="_blank" style="padding-right: 10px; padding-top: 15%; background-color: inherit">
+                <a href="https://drive.google.com/file/d/1sN6xrFxrFtBpdzZpyeu1M5UBplK-U_4j/view?usp=sharing" target="_blank" style="padding-right: 10px; padding-top: 15%; background-color: inherit">
                     <img src="images/adobe.png" alt="Resume" width="60" height="60" >
                     
               </a>
             </ul>
 	</div>
 	</div>
-	
+	<!--
 	<div class="subnav">
     <ul class="nav nav-pills style5">
 		<li><a type="button"  href="#workexp">Experience</a></li>
         <li><a type="button" href="#Edu">Education</a></li>
-        <!--<li><a type="button"  href="#Publis">Publications</a></li> -->
+        <!--<li><a type="button"  href="#Publis">Publications</a></li> ->
       	<li><a type="button"  href="#Intern">Internships</a></li>
 		<li><a type="button"  href="#Project">Projects</a></li>
       	<li><a type="button"  href="#Interests">Research Interests</a></li>
@@ -107,8 +107,14 @@
       	<li><a type="button"  href="#Skills">Technical Skills</a></li>
       </ul>
   </div>
+	-->
 	
-	<!--Work Experience---->
+	<iframe src="https://docs.google.com/document/d/1a-JC8ucq78CMnQM6XKgXwEovAG_OyA6uhU0LElqusQA/edit?usp=sharing&embedded=true" 
+style="width:100%; height:1000px;" frameborder="0"></iframe>
+
+	<!--
+	
+	<!-Work Experience->
 	<section id="workexp">
 	<h2 > Work Experience</h2>	 
 	<h3> Google</h3>
@@ -128,9 +134,9 @@
 	<code><a href="#Resume" class="style6">To the Top</a></code>
 	</div>
 	
-	
-	
-	<!--Eduction-->
+	-->
+	<!--
+	<!-Eduction->
 	<section id="Edu">
     <h2 >Education</h2>
 	
@@ -168,11 +174,11 @@
             <td>State Board (class X)</td>
             <td><div align="center">90 %</div></td>
 		    <td><div align="center">2007-08</div></td>
-          </tr> -->
+          </tr> 
         </tbody>
       </table>
 	  <code><a href="#Resume" class="style6">To the Top</a></code>    
-	  </div>
+	  </div> -->
 	  <!--Publications-->
 	<!-- <section id="Publis">
 	<h2 align="justify">Publications</h2>
@@ -184,7 +190,7 @@
 	  <code><a href="#Resume" class="style6">To the Top</a></code>
     </div> -->
 	
-	<!--Internships and training-->
+	<!--Internships and training->
 	<section id="Intern">
 	<h2 > Internships</h2>
 	<div >
@@ -238,7 +244,7 @@
 	
 	
 	
-	<!--Projects-->
+	<!--Projects->
 	<section id="Project">
 	<h2> Projects </h2>
 	<div>
@@ -309,7 +315,7 @@
 	</div> 
 	
 	
-	<!--Resaerch Interests-->
+	<!--Resaerch Interests->
 	<section id="Interests">
 	  <h2> Research Interests</h2>
 	  <div>
@@ -326,7 +332,7 @@
 	<code><a href="#Resume" class="style6">To the Top</a></code>
 	</div>
 	
-	<!--Academic Achievemnts-->
+	<!--Academic Achievemnts->
 	<section id="Achievements">
 	<h2>Academic Achievements</h2>
 	<div>
@@ -341,7 +347,7 @@
 	<code><a href="#Resume" class="style6">To the Top</a></code>
     </div>
 	
-	<!--Campus Leadership and activities-->
+	<!--Campus Leadership and activities->
 	<section id="Extra">
 	<h2 >Campus Leadership & Extra-Curricular Activities</h2>
 	<div>
@@ -378,6 +384,7 @@ children to showcase their talent.</li>
     </div>
 	
 	<!--Tech Skills-->
+	<!--
 	<section id="Skills">
 	<h2>Technical Skills</h2>
 	
@@ -412,7 +419,7 @@ children to showcase their talent.</li>
       
   </div>
   </div>
-	</div>
+	</div> -->
 <footer class="footer">
     <div class="container">
 
